contracts/manifests/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: acme-contracts-dashboard
  namespace: acme-contracts
  labels:
    app: acme-contracts-dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      deployment: acme-contracts-dashboard
  template:
    metadata:
      labels:
        deployment: acme-contracts-dashboard
    spec:
      containers:
        - name: acme-contracts-dashboard
          image: 'quay.io/dovid/simple-demo-webapp:amd64-latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: simple-demo-webapp-config
            mountPath: /var/www/html/config
      volumes:
        - name: simple-demo-webapp-config
          configMap:
            name: simple-demo-webapp-config
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
kind: Service
apiVersion: v1
metadata:
  name: acme-contracts-dashboard
  namespace: acme-contracts
  labels:
    app: acme-contracts-dashboard
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: acme-contracts-dashboard

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: acme-contracts-dashboard-route
  namespace: acme-contracts
spec:
  to:
    kind: Service
    name: acme-contracts-dashboard
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  wildcardPolicy: None
